--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11286,3 +11286,26 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+#loading {
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    left: 0%;
+    text-align: center;
+    opacity: 0.7;
+    background-color: #fff;
+    z-index: 99;
+}
+
+#loading .spinner-border {
+    position: fixed;
+    display: block;
+    top: 30%;
+    left: 50%;
+}
+
+.reverse {
+    direction: rtl
+}
