--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -21,3 +21,24 @@
 .reverse {
     direction: rtl
 }
+
+.pointer-function {
+    color: blue;
+    cursor: pointer;
+}
+
+#modalRevendedorSelect td {
+    cursor: pointer;
+}
+
+#modalRevendedorIndicados td {
+    cursor: pointer;
+}
+
+#modalVendaComissoes td {
+    cursor: pointer;
+}
+
+#modalRevendedorComissoes td {
+    cursor: pointer;
+}
